;;
;; crispy-forms-primer package
;;
[metadata]
name = crispy-forms-primer
version = 0.0.1
description = Django application to add 'django-crispy-forms' layout objects for Github Primer
long_description = file:README.md
author = Yuwei Tian
author_email = ibluefocus@gmail.com
url = https://github.com/galeo/crispy-forms-primer
license = MIT
keywords = Django, django-crispy-forms, primer
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=1.11
    django-crispy-forms>=1.6.1
packages = find:
zip_safe = True

[options.packages.find]
where = .

[wheel]
universal = 1
