;;
;; crispy-forms-primer package
;;
[metadata]
name = crispy-forms-primer
version = 0.4.2
description = Django application to add 'django-crispy-forms' layout objects for Github Primer
long_description = file:description.rst
author = Yuwei Tian
author_email = ibluefocus@nospam.outlook.com
url = https://github.com/galeo/crispy-forms-primer
license = MIT
keywords = Django, django-crispy-forms, primer
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=2.2
    django-crispy-forms>=1.9.0
python_requires = >=3.6
packages = find:
zip_safe = True

[options.packages.find]
where = .
